# gifgen

./: .gitignore  CMakeLists.txt  Dockerfile  IDENTIFICATION.txt  README.md  README.txt  degif.cpp  demo  gifgen.cpp  lzw_benchmarking.sh  main.cpp  presentation.url  run_all.sh
args/: CMakeLists.txt  args.cpp
args/include/: args.hpp
common/: image_utils.hpp
gif/: CMakeLists.txt  gif_block_buffer.cpp  gif_builder.cpp  sub_block_buffer.cpp
gif/include/: gif_block_buffer.hpp  gif_builder.hpp  gif_data_format.hpp  sub_block_buffer.hpp
gif/test/: test_gif_block_buffer.cpp  test_sub_block_buffer.cpp
image_input/: CMakeLists.txt  image_input.cpp
image_input/include/: image_input.hpp
image_io/: CMakeLists.txt  image_io.cpp
image_io/include/: image_io.hpp
lzw/: CMakeLists.txt  lzw.cpp
lzw/include/: lzw.hpp
lzw/test/: test_lzw.cpp
palettize/: CMakeLists.txt  color_table.cpp  median_cut.cpp  palettize.cpp
palettize/include/: color_table.hpp  median_cut.hpp  palettize.hpp
palettize/test/: test_color_table.cpp  test_median_cut.cpp
